<resources>
    <string name="app_name" translatable="false">Onruf</string>
    <string name="serverError">Error happened, please try again later</string>
    <string name="connectionError">Network Connection Fail</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA-hhR3N_WfZkeHbBvfIjJtfH9_a1SCiHE</string>
    <string name="saveThisSearch">Save this search</string>
    <string name="selectCountry">Select Country</string>
    <string name="selectRegionTitle">Select Region</string>
    <string name="selectDistrict">Select District</string>
    <string name="noResultFound">No Results Found</string>
    <string name="searchHere">Search Here</string>
    <string name="noSpecificationFound">No Specification Found</string>
    <string name="noQuestionsFound">No Questions Found</string>
    <string name="applyFilter">Apply Filter</string>
    <string name="recentlyView">Recently View</string>
    <string name="bidding">Bidding</string>
    <string name="show">Show</string>
    <string name="noProductsAdded">No Products Added</string>
    <string name="noProductsFound">No Products Found</string>
    <string name="noOrdersFound">No Orders Found</string>
    <string name="enterAllSpecificaiton">Enter All Specification</string>
    <string name="noSubCategoryFound">No Sub Categories Found</string>
    <string name="loggedoutsuccessfully">Logged Out Successfully</string>
    <string name="City">City</string>
    <string name="Confirm">Confirm</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Confirm_New_Password">Confirm New Password</string>
    <string name="Country">Country</string>
    <string name="Date_of_Birth">
    Date of Birth
  </string>
    <string name="Category">
    Category
  </string>
    <string name="Marketplace">
    Marketplace
  </string>
    <string name="Filter">
    Filter
  </string>
    <string name="New">New</string>
    <string name="SelectCategory">
    Select Category
  </string>
    <string name="Shipping">
    Shipping
  </string>
    <string name="used">
    Used
  </string>
    <string name="Viewall">
    View all
  </string>
    <string name="Password">Password</string>
    <string name="Region">Region</string>
    <string name="ResetPassword">
    Reset Password
  </string>
    <string name="Signin">Sign In</string>
    <string name="Username">Username</string>
    <string name="Female">Female</string>
    <string name="First_Name">First Name</string>
    <string name="Forgot_your_password">
    Forgot your password?
  </string>
    <string name="Gender">
    Gender
  </string>
    <string name="Last_Name">Last Name</string>
    <string name="Login">
    Login
  </string>
    <string name="Male">Male</string>
    <string name="Fieldcantbeempty">Field can\'t be empty</string>
    <string name="ZipCode">
    Zip Code
  </string>
    <string name="District_Name">
    District Name
  </string>
    <string name="Enter_your_Email">
    Enter your Email
  </string>
    <string name="QuantityAvailable">Quantity available</string>
    <string name="Select" formatted="true">Select %s</string>
    <string name="Please_select" formatted="true">Please select %s</string>
    <string name="Please" formatted="true">Please %s</string>
    <string name="Please_enter" formatted="true">Please enter %s</string>
    <string name="Description">
    Description
  </string>
    <string name="all">
    All
  </string>
    <string name="BuyNow">
    Buy Now
  </string>
    <string name="Auction">Auction</string>
    <string name="Abouttheseller">
    About the seller
  </string>
    <string name="AddtoWatchlist">
    Add to Watchlist
  </string>
    <string name="AskaQuestion">
    Ask a Question
  </string>
    <string name="Mobile">Mobile</string>
    <string name="LoginSuccessfully">
    Login Successfully
  </string>
    <string name="Location">
    Location
  </string>
    <string name="Membersince">
    Member since
  </string>
    <string name="Email">
    Email
  </string>
    <string name="Facebook">
    Facebook
  </string>
    <string name="PaymentOptions">
    Payment Options
  </string>
    <string name="Price">Price</string>
    <string name="Address">
    Address
  </string>
    <string name="Twitter">
    Twitter
  </string>
    <string name="Totalnumberoflistings">
    Total number of listings
  </string>
    <string name="Totalnumberofmembers">
    Total number of members
  </string>
    <string name="TotalOnlineVisitors">
    Total Online Visitors
  </string>
    <string name="SAR">SAR</string>
    <string name="Feedback">Feedback</string>
    <string name="Cancel">Cancel</string>
    <string name="cancelAshipmentOrder">
    Cancel a shipment order
  </string>
    <string name="Canceled">
   shipment has been cancelled
  </string>
    <string name="Riyadh">Riyadh</string>
    <string name="download_invoice">Download Invoice</string>
    <string name="Selling">Selling</string>
    <string name="ReserveNotMet">Reserve Not Met</string>
    <string name="Profile">
    Profile
  </string>
    <string name="Giveafeedback">
    Give a feedback
  </string>
    <string name="AddaNewCard">
    Add a New Card
  </string>
    <string name="logout">Logout</string>
    <string name="FreeshippingwithinSaudiArabia">Free shipping within Saudi Arabia</string>
    <string name="Pleaseaddaphoto">
    Please add a photo
  </string>
  <string name="Purchased">Purchased</string>
    <string name="Whilweareconfirmingyourpurchase">
    While we are confirming your purchase
  </string>
    <string name="Selectashippingoption">Select a shipping option</string>
    <string name="selectaPickUpoption">Select a pick up option</string>
    <string name="Details">Details</string>
    <string name="Instagram">Instagram</string>
    <string name="Buying">
    Buying
  </string>
    <string name="Selectall">Select all</string>
    <string name="Categories">Categories</string>
    <string name="CurrentListings">
    Current listings
  </string>
    <string name="MaximumImagesAllowedtoSelectare">
    Maximum Images Allowed to Select are %1$d
  </string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="ImageUploadedsuccessfully">
    Image Uploaded successfully
  </string>
    <string name="FailedinImageUpload">
    Failed in Image Upload
  </string>
    <string name="Delete">
    Delete
  </string>
    <string name="ErrorOccur">
   Error Occur
  </string>
    <string name="EditUserprofile">
    Edit User profile
  </string>
    <string name="Everyone">
    Everyone
  </string>
    <string name="Landline">
    Landline
  </string>
    <string name="MyProducts">My Products</string>
    <string name="MyProductsOffers">My Products Offers</string>
    <string name="Settings">Settings</string>
    <string name="Respondtothisfeedback">Respond to this feedback</string>
    <string name="PaymentMethod">Payment Method</string>
    <string name="NoImageSelected">No Image Selected</string>
    <string name="Selectshippingoptions">Select shipping options</string>
    <string name="Showmore">....Show more</string>
    <string name="Weight">Weight</string>
    <string name="WeightDimensions">Weight &amp; Dimensions</string>
    <string name="Width">Width</string>
    <string name="Card">Card</string>
    <string name="Confirmlocation">Confirm location</string>
    <string name="ExpiryDate">Expiry Date</string>
    <string name="Fixedpriceoffer">Fixed price offer</string>
    <string name="PickUp">Pick up</string>
    <string name="mustPickUp">Must pick up</string>
    <string name="noPickUp">No pick up</string>
    <string name="pickUpAvaliable">Pick up available</string>
    <string name="RegistrationNumber">Registration number</string>
    <string name="Save">Save</string>
    <string name="NoRecordFound">
    No Record Found
  </string>
    <string name="SignUp">Sign Up</string>
    <string name="Autobid">
    Auto Bid
  </string>
    <string name="BillingAddress">
    Billing Address
  </string>
    <string name="PrimaryContactInformation">
    Primary Contact Information
  </string>
    <string name="Information">
    Information
  </string>
    <string name="Subuser">
    Sub User
  </string>
    <string name="AreyousureyouwanttodeleteyourItem">
    Are you sure you want to delete your Item
  </string>
    <string name="Error">
    Error
  </string>
    <string name="Item">
    Item
  </string>
    <string name="Listing">
    Listing
  </string>
    <string name="Makkah">
    Makkah
  </string>
    <string name="Verificationcode">
    Verification code
  </string>
    <string name="clickhere">
    click here
  </string>
    <string name="Towatchthevideo">
    To watch the video
  </string>
    <string name="Increment">
    Increment
  </string>
    <string name="Range">
    Range
  </string>
    <string name="Balance">
    Balance
  </string>
    <string name="Remaining">
    Remaining
  </string>
    <string name="Views">
    Views
  </string>
    <string name="Emailisrequired">
    please  enter valid  E-mail
  </string>
    <string name="Pleaseenteravalidemailaddress">
    Please enter a valid email address
  </string>
    <string name="Passwordisrequired">Please  enter  password</string>
    <string name="Ididntreceiveacode">I didn\'t receive a code!</string>
    <string name="RESEND">RESEND</string>
    <string name="CodeExpired">Code Expired</string>
    <string name="OTPWrongTrialsExcced">OTP Wrong Trials Exceeded</string>
    <string name="InvalidOTP">Invalid OTP</string>
    <string name="NEXT">NEXT</string>
    <string name="EnterDateofBirth">Enter Date of Birth</string>
    <string name="StreetNumber">Street Number</string>
    <string name="Area">Area</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="Passwordtooweak">
 Password too weak
  </string>
    <string name="ShoppingCart">Shopping Cart</string>
    <string name="PrimaryContact">Primary Contact</string>
    <string name="BusinessName">Business Name</string>
    <string name="UniqueTrades">9 UniqueTrades</string>
    <string name="PermissionDenied">Permission denied</string>
    <string name="Seconds">Resend the code after: %1$s seconds</string>
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_watchlist">Favorite</string>
    <string name="type_your__curretn_password_here">Type Your Current Password Here</string>
    <string name="type_new_password_here">Type New Password Here</string>
    <string name="activation">Activation</string>
    <string name="confirm_mobile_number">Confirm mobile number</string>
    <string name="sent_code">we have sent the activation code to your phone no</string>
    <string name="we_are_glad_to_contact_you">We are glad to contact you</string>
    <string name="what_kind_of_help_do_you_need">What kind of help do you need?</string>
    <string name="type_of_communication">Type of communication</string>
    <string name="problem_title">Problem title</string>
    <string name="message_details">Message details</string>
    <string name="send">Send</string>
    <string name="addDiscount">Add Discount</string>
    <string name="modifyProduct">Edit Product</string>
    <string name="deleteProduct">Delete Product</string>
    <string name="changePassword">Change Password</string>
    <string name="passwordReset">password Reset</string>
    <string name="TypeNewPassword">Type New Password</string>
    <string name="sendOffer">Send Offer</string>
    <string name="repostTheProduct">Repost The Product</string>
    <string name="WaitingForPayment">Waiting for payment</string>
    <string name="WaitingForReview">Waiting for review</string>
    <string name="ReadyForDelivery">Ready for delivery</string>
    <string name="DeliveryInProgress">Delivery in progress</string>
    <string name="Delivered">Delivered</string>
</resources>