<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:title="" />

    <item
        android:id="@+id/navigation_watchlist"
        android:icon="@drawable/watchlist_bottomnav"
        android:title="@string/title_watchlist" />


    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/profileicon_bottomnav"
        android:title="@string/title_account"
        />

</menu>
