<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_bottom_sheet"
    android:orientation="vertical">
    <View
        android:layout_width="30sp"
        android:layout_height="5sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/bottom_sheet_header"
        />
    <TextView
        android:id="@+id/btnAddDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:foreground="?android:attr/selectableItemBackground"
        android:textColor="@color/black"
        android:padding="10dp"
        android:fontFamily="@font/madani_arabic_semi_bold"
        android:text="@string/addDiscount"/>
    <TextView
        android:id="@+id/btnSendOffer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:foreground="?android:attr/selectableItemBackground"
        android:textColor="@color/black"
        android:padding="10dp"
        android:fontFamily="@font/madani_arabic_semi_bold"
        android:text="@string/sendOffer"/>
    <TextView
        android:id="@+id/btnRepostTheProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:foreground="?android:attr/selectableItemBackground"
        android:textColor="@color/black"
        android:padding="10dp"
        android:fontFamily="@font/madani_arabic_semi_bold"
        android:text="@string/repostTheProduct"/>

    <TextView
        android:id="@+id/btnModifyProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:foreground="?android:attr/selectableItemBackground"
        android:textColor="@color/black"
        android:padding="10dp"
        android:fontFamily="@font/madani_arabic_semi_bold"
        android:text="@string/modifyProduct"/>
    <TextView
        android:id="@+id/btnDeleteProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:foreground="?android:attr/selectableItemBackground"
        android:textColor="@color/red"
        android:padding="10dp"
        android:fontFamily="@font/madani_arabic_semi_bold"
        android:text="@string/deleteProduct"
        android:layout_marginBottom="@dimen/_20sdp"/>
</LinearLayout>