<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".newPhase.presentation.fragments.accountFragment.editProfileActivity.ChangePasswordActivity">
    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar_main" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/password_icon"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40sdp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/madani_arabic_medium"
        android:text="@string/passwordReset"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/madani_arabic_light"
        android:text="@string/TypeNewPassword"
        android:textSize="@dimen/_13sdp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="@dimen/_10sdp"
        />


    <com.malqaa.androidappp.newPhase.utils.helper.widgets.edittext.TextFieldComponent
        android:id="@+id/tvCurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_your__curretn_password_here"
        android:inputType="textPassword"
        app:enablePasswordToggle="true"
        app:imeOptions="done"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:startIcon="@drawable/symbolpass" />
    <com.malqaa.androidappp.newPhase.utils.helper.widgets.edittext.TextFieldComponent
        android:id="@+id/tvNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/type_new_password_here"
        android:inputType="textPassword"
        app:enablePasswordToggle="true"
        app:imeOptions="done"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:startIcon="@drawable/symbolpass" />
    <com.malqaa.androidappp.newPhase.utils.helper.widgets.edittext.TextFieldComponent
        android:id="@+id/tvConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/Confirm_New_Password"
        android:inputType="textPassword"
        app:enablePasswordToggle="true"
        app:imeOptions="done"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:startIcon="@drawable/symbolpass" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/round_btn"
        android:fontFamily="@font/madani_arabic_semi_bold"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:text="@string/changePassword"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="@dimen/_12sdp" />
</LinearLayout>