<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/round_checkbox" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/madani_arabic_bold"
                android:text="@string/confirm_mobile_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/madani_arabic_light"
                android:text="@string/sent_code"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />



            <TextView
                android:id="@+id/redmessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="ERROR"
                android:textColor="@color/Red"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView350"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/Ididntreceiveacode"
                android:textSize="15sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView3501"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="@string/RESEND"
                android:textAllCaps="true"
                android:textColor="#339933"
                android:textSize="14sp"
                android:visibility="gone" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/madani_arabic_light"
                android:text="@string/Seconds"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/round_btn"
                android:fontFamily="@font/madani_arabic_semi_bold"
                android:onClick="SignuuPg2confirmInput"

                android:text="@string/activation"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>